# MOOS-pNavEKF

./: .gitignore  CMakeLists.txt  NavEKF.cpp  NavEKF.h  NavEKF_Info.cpp  NavEKF_Info.h  NavEKF_increment.cpp  NavEKF_increment.h  README.md  main.cpp  pNavEKF.moos
doc/: EKF-description.ipynb
tests/: NavIncrementTest.cpp
